postgre/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: postgres
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  type: NodePort
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
      nodePort: 32000
